--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+  justify-content: center;
 }
-
+.Mycard{
+  margin-bottom: 10px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
