--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -15,8 +15,8 @@ $medicine-pink: #FF92C2;
 $neptunes-anger-blue: #587B7F;
 $dull-gold: #587B7F;
 $grey-silver: #D3D0CB;
-$new-wood: #A4825A
-
+$new-wood: #A4825A;
+$react: #282c34;
 
 
 // Update Bulma's global variables
@@ -34,7 +34,6 @@ $body-background-color: $beige-lighter;
 $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
-$card-color: #382A2A;
 
 
 // Import only what you need from Bulma
@@ -48,4 +47,5 @@ $card-color: #382A2A;
 @import '../node_modules/bulma/sass/layout/hero.sass';
 @import '../node_modules/bulma/sass/layout/section.sass';
 @import '../node_modules/bulma/sass/components/modal.sass';
-@import '../node_modules/bulma/sass/components/card.sass';
+@import '../node_modules/bulma/sass/components/card.sass';  
+@import '../node_modules/bulma/sass/grid/_all.sass';
